Fixed errors, added table with weights and dates inputs.

--- a/weight.html
+++ b/weight.html
@@ -1,4 +1,6 @@
-<!-- make table with inputs & make them deletable one by one -->
+<!-- make not accessible log weight if not weight and date input nonempty -->
+<!-- make table not show null data -->
+<!-- actualize data if same date diff weight input -->
 
 <!DOCTYPE html>
 <html lang="en">
