Added individual js files for each page, fixed some things in the weight page and started with habits page

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Self-improvement</title>
+        <title>Improve Daily - Home</title>
         <link rel="stylesheet" href="styles.css">
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="All-in-one self-improvement web to help you achieve your goals, track daily habits, count food calories, etc. +View your results with data and charts!">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900" rel="stylesheet">
@@ -41,6 +42,5 @@
                 <a href="weight.html">Look into the weight logger</a>
             </section>
         </main>
-        <script src="script.js"></script>
     </body>
 </html>
