--- a/weight.html
+++ b/weight.html
@@ -1,4 +1,3 @@
-<!-- make not accessible log weight if not weight and date input nonempty -->
 <!-- make table not show null data -->
 <!-- actualize data if same date diff weight input -->
 
@@ -6,7 +5,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Self-improvement</title>
+        <title>Improve Daily - Weight</title>
         <link rel="stylesheet" href="styles.css">
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,7 +24,7 @@
         </header>
         <main>
             <section>
-                <p style="text-align: center; color: #525252; margin-bottom: 5px;">Welcome to the</p>
+                <p style="text-align: center; color: #525252; margin-bottom: 5px;">Welcome to the daily</p>
                 <p class="pageTitles">WEIGHT LOGGER</p>
                 <div id="weightInputCard">
                     <div>
@@ -67,6 +66,6 @@
             </section>
             <button onclick="add223to420()" style="margin-top: 30px">Add from 2/23 to 4/20</button>
         </main>
-        <script src="script.js"></script>
+        <script src="weight.js"></script>
     </body>
 </html>
